# claude-clis

./: .gitignore  1.docx  1.md  IMPLEMENTATION.md  README.md  config.example.yaml  main.py  pyproject.toml
documents/: IMPLEMENTATION.md  user-guide.md
promotes/: init.md
src/claude_clis/: main.py
src/claude_clis/commands/: __init__.py  claude_code.py
src/claude_clis/shared/: ai_client.py  config.py  utils.py
src/claude_clis/tools/doc2md/: cli.py  markdown_writer.py  processor.py
src/claude_clis/tools/doc2md/readers/: pdf.py  word.py
tests/shared/: test_config.py  test_utils.py
tests/tools/doc2md/: test_markdown_writer.py
